RESOLVED FIXED11379
crash seen in editing tests (in new DeleteButtonController)
https://bugs.webkit.org/show_bug.cgi?id=11379
Summary crash seen in editing tests (in new DeleteButtonController)
Darin Adler
Reported 2006-10-21 19:37:27 PDT
I can reproduce a crash every time in the editing layout tests. I have a fix in the works.
Attachments
patch that fixes assertion failure, does some related cleanup (17.59 KB, patch)
2006-10-21 19:52 PDT, Darin Adler
andersca: review+
Darin Adler
Comment 1 2006-10-21 19:52:26 PDT
Created attachment 11180 [details] patch that fixes assertion failure, does some related cleanup
Anders Carlsson
Comment 2 2006-10-21 19:56:46 PDT
Comment on attachment 11180 [details] patch that fixes assertion failure, does some related cleanup r=me
Darin Adler
Comment 3 2006-10-21 20:04:55 PDT
Committed revision 17202.
Note You need to log in before you can comment on or make changes to this bug.