WebCore/bridge/mac/FrameMac.mm
@@ -148,7 +148,7 @@ static SEL selectorForKeyEvent(const PlatformKeyboardEvent* event)
     return selector;
 }
 
-FrameMac::FrameMac(Page* page, Element* ownerElement, EditorClient* client)
+FrameMac::FrameMac(Page* page, Element* ownerElement, PassRefPtr<EditorClient> client)
     : Frame(page, ownerElement, client)
     , _bridge(nil)
     , _mouseDownView(nil)
